k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magiccap-upload-proxy
  labels:
    run: magiccap-upload-proxy
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: magiccap-upload-proxy
