k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: magiccap-upload-proxy-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
    - proxy.magiccap.me
    secretName: magiccap-upload-proxy-prod-letsencrypt
  rules:
  - host: proxy.magiccap.me
    http:
      paths:
      - path: /
        backend:
          serviceName: magiccap-upload-proxy
          servicePort: 8080
